--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Create background</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="https://cdn.skypack.dev/@svgdotjs/svg.js" type="module"></script>
+    <script src="https://cdn.skypack.dev/@georgedoescode/generative-utils@1.0.0" type="module"></script>
+    <script src="https://cdn.skypack.dev/tinycolor2@1.4.2" type="module"></script>
+    <script src="https://cdn.skypack.dev/@svgdotjs/svg.filter.js" type="module"></script>
+    <script src="https://cdn.skypack.dev/copy-to-clipboard@3.3.1" type="module"></script>
+    <script src="https://cdn.skypack.dev/gsap@3.6.0" type="module"></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <div class="canvas-wrapper">
