--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create background</title>
+    <link rel="icon" type="image/png" href="./logo.png">
+
 
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.skypack.dev/@svgdotjs/svg.js" type="module"></script>
