--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
                 @keyframes waveAnimation {
                 0%, 100% {
-                    transform: translateY(0) translateX(0);
+                    transform: scale(1);
                 }
                 50% {
-                    transform: translateY(20px) translateX(40px);
+                    transform: scale(1.3);
                 }
                 100% {
-                    transform: translateY(0) translateX(0);
+                    transform: scale(1);
                 }
                 }
             </style>
